木材采集任务测试通过

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -169,6 +169,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "68d06694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wood_collection = {\n",
+    "    \"resource\": \"wood\",\n",
+    "    \"quantity\": 500,\n",
+    "    \"tool\": \"axe\",\n",
+    "    \"location\": \"forest\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "40895e6a",
    "metadata": {},
