生肉采集完成，开始木材采集任务

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -169,6 +169,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "cf9a11e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Renamed: wood_collection_Step1_open.png -> meat_collection_Step1_open.png\n",
+      "Renamed: wood_collection_Step1_open_config.yaml -> meat_collection_Step1_open_config.yaml\n",
+      "Renamed: wood_collection_Step1_window.png -> meat_collection_Step1_window.png\n",
+      "Renamed: wood_collection_Step1_window_config.yaml -> meat_collection_Step1_window_config.yaml\n",
+      "Renamed: wood_collection_Step2_open.png -> meat_collection_Step2_open.png\n",
+      "Renamed: wood_collection_Step2_open_config.yaml -> meat_collection_Step2_open_config.yaml\n",
+      "Renamed: wood_collection_Step2_window.png -> meat_collection_Step2_window.png\n",
+      "Renamed: wood_collection_Step2_window_config.yaml -> meat_collection_Step2_window_config.yaml\n",
+      "Renamed: wood_collection_Step3_open.png -> meat_collection_Step3_open.png\n",
+      "Renamed: wood_collection_Step3_open_config.yaml -> meat_collection_Step3_open_config.yaml\n",
+      "Renamed: wood_collection_Step3_window.png -> meat_collection_Step3_window.png\n",
+      "Renamed: wood_collection_Step3_window_config.yaml -> meat_collection_Step3_window_config.yaml\n",
+      "Renamed: wood_collection_Step4_open.png -> meat_collection_Step4_open.png\n",
+      "Renamed: wood_collection_Step4_open_config.yaml -> meat_collection_Step4_open_config.yaml\n",
+      "Renamed: wood_collection_Step4_window.png -> meat_collection_Step4_window.png\n",
+      "Renamed: wood_collection_Step4_window_config.yaml -> meat_collection_Step4_window_config.yaml\n",
+      "Renamed: wood_collection_Step5_open.png -> meat_collection_Step5_open.png\n",
+      "Renamed: wood_collection_Step5_open_config.yaml -> meat_collection_Step5_open_config.yaml\n",
+      "Renamed: wood_collection_Step5_window.png -> meat_collection_Step5_window.png\n",
+      "Renamed: wood_collection_Step5_window_config.yaml -> meat_collection_Step5_window_config.yaml\n",
+      "Renamed: wood_collection_Step6_open.png -> meat_collection_Step6_open.png\n",
+      "Renamed: wood_collection_Step6_open_config.yaml -> meat_collection_Step6_open_config.yaml\n",
+      "Renamed: wood_collection_Step6_window.png -> meat_collection_Step6_window.png\n",
+      "Renamed: wood_collection_Step6_window_config.yaml -> meat_collection_Step6_window_config.yaml\n",
+      "Renamed: wood_collection_Step7_open.png -> meat_collection_Step7_open.png\n",
+      "Renamed: wood_collection_Step7_open_config.yaml -> meat_collection_Step7_open_config.yaml\n",
+      "Renamed: wood_collection_Step7_window.png -> meat_collection_Step7_window.png\n",
+      "Renamed: wood_collection_Step7_window_config.yaml -> meat_collection_Step7_window_config.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "folder = \"images\"\n",
+    "for filename in os.listdir(folder):\n",
+    "    if \"wood_collection\" in filename:\n",
+    "        new_filename = filename.replace(\"wood_collection\", \"meat_collection\")\n",
+    "        os.rename(os.path.join(folder, filename), os.path.join(folder, new_filename))\n",
+    "        print(f\"Renamed: {filename} -> {new_filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "68d06694",
    "metadata": {},
@@ -179,6 +231,12 @@
     "    \"quantity\": 500,\n",
     "    \"tool\": \"axe\",\n",
     "    \"location\": \"forest\"\n",
+    "}\n",
+    "meat_collection = {\n",
+    "    \"resource\": \"raw_meat\",\n",
+    "    \"quantity\": 20,\n",
+    "    \"tool\": \"knife\",\n",
+    "    \"location\": \"hunting_ground\"\n",
     "}"
    ]
   },
